# resnet_trt

./: .gitignore  CMakeLists.txt  README.md  main.cpp
python_scripts/: load_pt_model.py  resnet.py
